@@ -21,6 +21,7 @@ droplet-1.07（进行中）
 ------------------------------------------------------------------------
 1.支持更换参数重启脚本
 2.新启动的脚本将统一加上--merge参数，确保重启时使用同一条记录
+3.重启droplet服务的延迟5秒，由5秒后开始清理脚本，改为调用清理函数之后，延迟5秒再调用reboot命令
 
 
 run-1.51
